Home page updated

--- a/Q2- WID Dewmini/Pages/Index.cshtml
+++ b/Q2- WID Dewmini/Pages/Index.cshtml
@@ -5,6 +5,16 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Information Management Center </h1>
+    <h1 class="display-4"> Pearl Academy </h1>
+    <p>Learn about <a href="">building Web apps with ASP.NET Core</a>.</p>
+    <div style="text-align: center; margin-top: 20px;">
+        <button style="background-color: #0d6efd; color: white; padding: 10px 20px; border: none; font-size: 16px; cursor: pointer; border-radius: 5px; margin: 5px;">
+            
+            <a class="" asp-area="" asp-page="/Courses">View Courses</a>
+        </button>
+        <button style="background-color: #198754; color: white; padding: 10px 20px; border: none; font-size: 16px; cursor: pointer; border-radius: 5px; margin: 5px;">
+            <a class="" asp-area="" asp-page="/StudentInfo/Index"> View Student Information</a>
+        </button>
+    
 </div>
