--- a/Q2- WID Dewmini/Pages/Courses.cshtml
+++ b/Q2- WID Dewmini/Pages/Courses.cshtml
@@ -6,7 +6,9 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>Onlne courses Available</p>
+
+<p>Explore our wide range of courses designed to enhance your skills and knowledge.</p>
+
 <div class="table-responsive">
     <table class="table table-bordered table-hover">
         <thead>
@@ -48,6 +50,7 @@
         Edit Courses
     </button>
 </div>
+
 
 
 
