--- a/Q2- WID Dewmini/Pages/StudentInfo/Index.cshtml
+++ b/Q2- WID Dewmini/Pages/StudentInfo/Index.cshtml
@@ -2,7 +2,7 @@
 @model Q2__WID_Dewmini.Pages.StudentInfo.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Student Information";
 }
 
 <h1>Index</h1>
