--- a/Q2- WID Dewmini/Pages/Shared/_Layout.cshtml
+++ b/Q2- WID Dewmini/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Information Management System - Pearl Academy - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 - Information Management Center - Pearl Academy - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
