--- a/Q2- WID Dewmini/Pages/StudentInfo/Index.cshtml
+++ b/Q2- WID Dewmini/Pages/StudentInfo/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Student Information";
 }
 
-<h1>Index</h1>
+<h1>Student Information</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
