--- a/Q2- WID Dewmini/Pages/Privacy.cshtml
+++ b/Q2- WID Dewmini/Pages/Privacy.cshtml
@@ -14,7 +14,7 @@
         <li>Cookies are used to improve site functionality and user experience.</li>
         <li>You can request to view, update, or delete your data at any time.</li>
         <li>We take reasonable measures to protect your information, but no system is 100% secure.</li>
-        <li>Contact us at <a href="mailto:[email protected]">[email protected]</a> for any privacy-related inquiries.</li>
+        <li>Contact us at <a href="mailto:[email protected]">Info@PearlAcademy.com</a> for any privacy-related inquiries.</li>
     </ul>
 </section>
 
